UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Vision_Market_Share_Expansion__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Dollar__c</fullName>
        <label>Baseline Dollar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_Price__c</fullName>
        <label>Baseline Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_Volume__c</fullName>
        <label>Baseline Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Indirect_Selling_Units__c</fullName>
        <label>Current Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Retail_Direct_Units__c</fullName>
        <label>Current Retail Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Retail_Indirect_Units__c</fullName>
        <label>Current Retail Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Wholesaler_Units__c</fullName>
        <label>Current Wholesaler Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRL_Share_of_Customer__c</fullName>
        <label>DRL Share of Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exec_Owner__c</fullName>
        <label>Exec Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <label>Function Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Created_Date__c</fullName>
        <label>GCP Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GCP_Customer_Code__c</fullName>
        <label>GCP Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Customer_Code_temp__c</fullName>
        <label>Customer Code Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Customer_Name__c</fullName>
        <label>GCP Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Code_Temp__c</fullName>
        <label>GCP Product Code Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Code__c</fullName>
        <label>GCP Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_User_Account_Owner__c</fullName>
        <formula>Vision_Customer__r.OwnerId == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_Ident__c</fullName>
        <label>Move Ident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Contract_Effective_Date__c</fullName>
        <label>Plan Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Opportunity</label>
        <referenceTo>Product_Opportunity__c</referenceTo>
        <relationshipLabel>Market Share Expansions</relationshipLabel>
        <relationshipName>Market_Share_Expansions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Contract_Bid_Price_Marketing__c</fullName>
        <label>Proposed Contract Bid Price (Marketing)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Contract_Bid_Price_Sales__c</fullName>
        <label>Proposed Contract Bid Price (Sales)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Current_Rebate__c</fullName>
        <label>Proposed Current Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposed_Direct_Selling_Unit__c</fullName>
        <label>Proposed Direct Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Direct_Selling_Units__c</fullName>
        <label>Proposed Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Indirect_Selling_Unit__c</fullName>
        <label>Proposed Indirect Selling Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Indirect_Selling_Units__c</fullName>
        <label>Proposed Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Group_Strength__c</fullName>
        <label>SKU Group Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Number__c</fullName>
        <label>SKU Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Dollar__c</fullName>
        <label>Target Dollar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Price__c</fullName>
        <label>Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Comment__c</fullName>
        <label>Task Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Ident__c</fullName>
        <label>Task Ident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent to OPPORTUNITY</fullName>
                </value>
                <value>
                    <fullName>Sent to BRIGHT</fullName>
                </value>
                <value>
                    <fullName>not_started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Variant__c</fullName>
        <label>Task Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Bright_Deletion_Comments__c</fullName>
        <label>Bright Deletion Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_CVS_Share_for_ROS__c</fullName>
        <label>CVS Vol Share for ROS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Cardinal_Share_For_Ros__c</fullName>
        <label>Cardinal Vol Share For Ros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Anda_Units__c</fullName>
        <label>Current Anda Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Template__c</fullName>
        <label>Customer Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC Pharmagen</fullName>
                </value>
                <value>
                    <fullName>ABC Progen</fullName>
                </value>
                <value>
                    <fullName>BASE/DSH</fullName>
                </value>
                <value>
                    <fullName>ClarusOne</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Direct and Indirect</fullName>
                </value>
                <value>
                    <fullName>Econdisc</fullName>
                </value>
                <value>
                    <fullName>Government Pricing</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Net Indirect Pricing</fullName>
                </value>
                <value>
                    <fullName>ROS</fullName>
                </value>
                <value>
                    <fullName>RXSS</fullName>
                </value>
                <value>
                    <fullName>Sams Club</fullName>
                </value>
                <value>
                    <fullName>Walgreens</fullName>
                </value>
                <value>
                    <fullName>Humana Indirect retail</fullName>
                </value>
                <value>
                    <fullName>Humana Indirect CII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Share Expansions</relationshipLabel>
        <relationshipName>Market_Share_Expansions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Internal_Target_Date__c</fullName>
        <label>Internal Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Major_Share_For_Ros__c</fullName>
        <label>Major Vol Share For Ros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Old_Target_Dollar__c</fullName>
        <label>Old Target Dollar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Old_Target_Price__c</fullName>
        <label>Old Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Old_Target_Volume__c</fullName>
        <label>Old Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Old_Task_Type__c</fullName>
        <label>Old Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Old_Task_Variant__c</fullName>
        <label>Old Task Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Panorama_Submitter_Email__c</fullName>
        <label>Panorama Submitter Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Panorama_Submitter_Name__c</fullName>
        <label>Panorama Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Market Share Expansions</relationshipLabel>
        <relationshipName>Market_Share_Expansions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Anda_Units__c</fullName>
        <label>Proposed Anda Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_AutoSub_Units__c</fullName>
        <label>Proposed AutoSub Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_BASE_Units__c</fullName>
        <label>Proposed BASE Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_CVS_Direct_Units__c</fullName>
        <label>Proposed CVS Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_CVS_Indirect_Units__c</fullName>
        <label>Proposed CVS Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Cardinal_Units__c</fullName>
        <label>Proposed Cardinal Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_DSH_Units__c</fullName>
        <label>Proposed DSH Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_DirectAholdDelhaizeUnits__c</fullName>
        <label>Proposed Direct Ahold/Delhaize Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Accerodo_Units__c</fullName>
        <label>Proposed Direct Accerodo Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Cigna_Units__c</fullName>
        <label>Proposed Direct Cigna Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Cordant_Units__c</fullName>
        <label>Proposed Direct Cordant Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_ESI_Units__c</fullName>
        <label>Proposed Direct ESI Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Gaint_Eagle_Units__c</fullName>
        <label>Proposed Direct Gaint Eagle Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Kroger_Units__c</fullName>
        <label>Proposed Direct Kroger Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Rx_Outreach_Units__c</fullName>
        <label>Proposed Direct Rx Outreach Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Direct_Supervalu_Units__c</fullName>
        <label>Proposed Direct Supervalu Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_IndirectRxOutreach_Units__c</fullName>
        <label>Proposed Indirect Rx Outreach Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Accerodo_Units__c</fullName>
        <label>Proposed Indirect Accerodo Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Cigna_Units__c</fullName>
        <label>Proposed Indirect Cigna Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Cordant_Units__c</fullName>
        <label>Proposed Indirect Cordant Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_ESI_Units__c</fullName>
        <label>Proposed Indirect ESI Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Kroger_Units__c</fullName>
        <label>Proposed Indirect Kroger Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Indirect_Supervalu_Units__c</fullName>
        <label>Proposed Indirect Supervalu Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Major_Units__c</fullName>
        <label>Proposed Major Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_OS_Units__c</fullName>
        <label>Proposed OS Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_RAD_Units__c</fullName>
        <label>Proposed RAD Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Share_Percentage__c</fullName>
        <label>Proposed Share Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Smith_Drug_Units__c</fullName>
        <label>Proposed Smith Drug Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_TotalRetailIndirectUnits__c</fullName>
        <label>Proposed Total Retail Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Units__c</fullName>
        <label>Proposed Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Value_EA__c</fullName>
        <label>Proposed Value EA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_Volume__c</fullName>
        <label>Proposed Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Proposed_WMT_Units__c</fullName>
        <label>Proposed WMT Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Reference_Contracts__c</fullName>
        <label>Reference Contracts</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Target_Price__c</fullName>
        <label>Target Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Task_Rejection_Reason__c</fullName>
        <label>Task Rejection Reason</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Proposed_Units_EU__c</fullName>
        <label>Total Proposed Units (EU)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_confidence_level__c</fullName>
        <label>Vision confidence level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_customer_expectation_lead_time__c</fullName>
        <label>Vision customer expectation lead time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_ext_mfg_scm_approved_by__c</fullName>
        <label>Vision ext_mfg_scm_approved_by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_ext_mfg_scm_approved_on_date__c</fullName>
        <label>Vision ext_mfg_scm_approved_on_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_ext_mfg_scm_remarks__c</fullName>
        <label>Vision ext_mfg_scm_remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_incremental_volume_by_scm__c</fullName>
        <label>Vision incremental_volume_by_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_india_scm_approved_by__c</fullName>
        <label>Vision india_scm_approved_by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_india_scm_approved_on_date__c</fullName>
        <label>Vision india_scm_approved_on_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_india_scm_remarks__c</fullName>
        <label>Vision india_scm_remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_initialorder_volume_by_scm__c</fullName>
        <label>Vision initialorder_volume_by_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_isAccepted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Vision isAccepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_remarks_by_pm__c</fullName>
        <label>Vision remarks_by_pm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_remarks_by_scm__c</fullName>
        <label>Vision remarks_by_scm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_scm_approved_date__c</fullName>
        <label>Vision scm approved date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_scm_manager__c</fullName>
        <label>Vision scm manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_sku_split_flag__c</fullName>
        <label>Vision sku_split_flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_supply_duration_scm__c</fullName>
        <label>Vision supply_duration_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_supply_effectivedate_SCM__c</fullName>
        <label>Vision supply_effectivedate SCM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_supply_requirement__c</fullName>
        <label>Vision supply requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_total_incremental_volume_by_scm__c</fullName>
        <label>Vision total_incremental_volume_by_scm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_total_initial_order_quantity_by_s__c</fullName>
        <label>Vision total_initial_order_quantity_by_s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MnthAnnualCurrentIndirectSel_Pharmage__c</fullName>
        <label>Current Indirect SellingUnits(Pharmagen)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrentAutoSubSellingUnit__c</fullName>
        <label>Current Auto Sub Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrentDSHSellingUnit__c</fullName>
        <label>Current DSH Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrent_BASE_Selling_unit__c</fullName>
        <label>Current BASE Selling units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualCurrent_IndirectSellingunit__c</fullName>
        <label>Current Indirect Selling units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthAnnualTotalDirectSellingUnit__c</fullName>
        <label>Total Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthsAnnualizedCVSIndirectSelling_uni__c</fullName>
        <label>CVS Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3MonthsAnnualized_Crnt_DirectSellinguni__c</fullName>
        <label>Current Direct Selling units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3Months_AnnualizedCVS_DirectSelling_Uni__c</fullName>
        <label>3 Months Annual CVS Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3Months_Annualized_Cardinal_Selling_Uni__c</fullName>
        <label>Cardinal Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3Months_Annualized_Indirect_Selling_Uni__c</fullName>
        <label>3MonthsAnnualized Indirect Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_Direct_Selling_Unit__c</fullName>
        <label>3 Months Annualized Direct Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_Major_Selling_Unit__c</fullName>
        <label>3 Months Annual Major Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_OS_And_RAD_Units__c</fullName>
        <label>3 Months Annualized OS And RAD Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_Total_Selling_Units__c</fullName>
        <label>3 Months Annualized Total Selling Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_WMT_Direct_Units__c</fullName>
        <label>3 Months Annualized WMT Direct Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Months_Annualized_WMT_Indirect_Units__c</fullName>
        <label>3 Months Annualized WMT Indirect Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market Share Expansion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vision_Customer__c</field>
            <operation>equals</operation>
            <value>Walgreen Company</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Vision_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recent_Market_Share_Expanision_Moves</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User_Account_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Recent Market Share Expanision Moves</label>
    </listViews>
    <nameField>
        <displayFormat>MktShareExp-{0000000}</displayFormat>
        <label>Market Share Expansion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Share Expansions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>